fix: champ panel height on mobile

--- a/src/css/MainPage.scss
+++ b/src/css/MainPage.scss
@@ -212,7 +212,7 @@ a {
     .title {font-size: 3rem; margin: 0.5em 0 1em;}
     .champion-container {margin: 1em; padding: .5em;}
     .close-button {transform: scale(0.8); -moz-transform: scale(0.8); -o-transform: scale(0.8); -webkit-transform: scale(0.8);}
-    .champion-card {height: 15.5em; margin: 0.5em; width: 29%;}
+    .champion-card {margin: 0.5em; width: 29%;}
     .champion-loading img {position: relative; width: 100%; object-fit: cover;}
     .champion-card-name {margin: -5em 0 0 0; font-size: 0.5rem; padding: 5px;}
     .champion-loading {height: 100%; width: 100%;}
